中華民國國旗版🇹🇼

--- a/config/Shadowrocket/config_iOS.conf
+++ b/config/Shadowrocket/config_iOS.conf
@@ -53,48 +53,61 @@ private-ip-answer = false
 🌐 全部节点 = select,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=.*
 
 [Rule]
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/XiaoMi/XiaoMi.list,DIRECT
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Wikipedia/Wikipedia.list,💻 GITHUB
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/OpenAI/OpenAI.list,🤖️ CHATGPT
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/AppleProxy/AppleProxy.list.list,🚀 节点选择
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Telegram/Telegram.list,📲 TELEGRAM
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/GitHub/GitHub.list,💻 GITHUB
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Microsoft/Microsoft.list,🪟 MICROSOFT
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Twitter/Twitter.list,🐬 TWITTER
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Shadowrocket/Google/Google.list,🍀 GOOGLE
+DOMAIN-SUFFIX,deepseek.com,🚀 节点选择
+DOMAIN-KEYWORD,yahoo,🍀 GOOGLE
+DOMAIN-SUFFIX,yahoo.com,🍀 GOOGLE
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/GoogleVoice/GoogleVoice.list,🇺🇸 美国节点
+DOMAIN-SUFFIX,fanmingming.com,💻 GITHUB
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Wikipedia/Wikipedia.list,💻 GITHUB
+DOMAIN-SUFFIX,zh.wikipedia.org,💻 GITHUB
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/OpenAI/OpenAI.list,🤖️ CHATGPT
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/AppleProxy/AppleProxy.list.list,🚀 节点选择
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Telegram/Telegram.list,📲 TELEGRAM
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/GitHub/GitHub.list,💻 GITHUB
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Microsoft/Microsoft.list,🪟 MICROSOFT
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Twitter/Twitter.list,🐬 TWITTER
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Shadowrocket/Google/Google.list,🍀 GOOGLE
 DOMAIN-KEYWORD,ubisoft,🎮 游戏平台
 DOMAIN-KEYWORD,steam,🎮 游戏平台
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Game/Game.list,🎮 游戏平台
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/TikTok/TikTok.list,🎵 TIKTOK
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/PayPal/PayPal.list,💶 PAYPAL
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Facebook/Facebook.list,📷 INSTAGRAM
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Instagram/Instagram.list,📷 INSTAGRAM
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/YouTube/YouTube.list,📹 YOUTUBE
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/YouTubeMusic/YouTubeMusic.list,📹 YOUTUBE
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Netflix/Netflix.list,🎥 NETFLIX
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Disney/Disney.list,🎥 NETFLIX
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/USMedia/USMedia.list,🇺🇸 美国节点
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/UKMedia/UKMedia.list,🚀 节点选择
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Twitch/Twitch.list,🚀 节点选择
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/scongf/rule/refs/heads/master/config/Shadowrocket/Proxy.list,🚀 节点选择
-DOMAIN-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/scongf/rule/refs/heads/master/config/Shadowrocket/Proxy.list,🚀 节点选择
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/AppStore/AppStore.list,🍎 APPLE
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Apple/Apple.list,🍎 APPLE
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Weibo/Weibo.list,🎯 全球直连
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Game/Game.list,🎮 游戏平台
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/TikTok/TikTok.list,🎵 TIKTOK
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/PayPal/PayPal.list,💶 PAYPAL
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Facebook/Facebook.list,📷 INSTAGRAM
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Instagram/Instagram.list,📷 INSTAGRAM
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/YouTube/YouTube.list,📹 YOUTUBE
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/YouTubeMusic/YouTubeMusic.list,📹 YOUTUBE
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Netflix/Netflix.list,🎥 NETFLIX
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Disney/Disney.list,🎥 NETFLIX
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/USMedia/USMedia.list,🇺🇸 美国节点
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/UKMedia/UKMedia.list,🚀 节点选择
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Twitch/Twitch.list,🚀 节点选择
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/scongf/rule/refs/heads/master/config/Shadowrocket/Proxy.list,🚀 节点选择
+DOMAIN-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/scongf/rule/refs/heads/master/config/Shadowrocket/Proxy.list,🚀 节点选择
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/AppStore/AppStore.list,🍎 APPLE
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Apple/Apple.list,🍎 APPLE
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/CCB/CCB.list,DIRECT
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/XiaoHongShu/XiaoHongShu.list,DIRECT
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/ICBC/ICBC.list,DIRECT
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/BOC/BOC.list,DIRECT
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/DouBan/DouBan.list,🎯 全球直连
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Weibo/Weibo.list,🎯 全球直连
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/115/115.list,DIRECT
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/DouYin/DouYin.list,DIRECT
 DOMAIN-KEYWORD,weibo,🎯 全球直连
-DOMAIN-SUFFIX,api.bilibili.com,🎯 全球直连
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/BiliBili/BiliBili.list,🎯 全球直连
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/ByteDance/ByteDance.list,🎯 全球直连
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/WeChat/WeChat.list,DIRECT
-RULE-SET,https://whatshub.top/rule/ChinaMedia.list,🎯 全球直连
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaMax/ChinaMax_All.list,DIRECT
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/China/China.list,🎯 全球直连
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/ChinaTest/ChinaTest.list,🎯 全球直连
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/ChinaIPs/ChinaIPs.list,🎯 全球直连
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/XiaoMi/XiaoMi.list,DIRECT
+DOMAIN-SUFFIX,api.bilibili.com,DIRECT
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/BiliBili/BiliBili.list,DIRECT
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/ByteDance/ByteDance.list,DIRECT
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/WeChat/WeChat.list,DIRECT
+RULE-SET,https://whatshub.top/rule/ChinaMedia.list,DIRECT
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaMax/ChinaMax_All.list,DIRECT
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/China/China.list,DIRECT
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/ChinaTest/ChinaTest.list,DIRECT
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/ChinaIPs/ChinaIPs.list,DIRECT
 GEOIP,CN,DIRECT
 IP-CIDR,192.168.2.0/24,FSC,no-resolve
 
-#RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Advertising/Advertising.list,REJECT
+#RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Advertising/Advertising.list,REJECT
 FINAL,🐟 漏网之鱼
 
 [Host]
