--- a/config/Clash/nikki.yaml
+++ b/config/Clash/nikki.yaml
@@ -207,27 +207,27 @@ rule-providers:
 rules:
   - "RULE-SET,LocalAreaNetwork,DIRECT"
   - "RULE-SET,UnBan,DIRECT"
-  - "RULE-SET,Google,🌐 全部节点"
+  - "RULE-SET,Google,♻️ 自动选择"
   - "RULE-SET,GoogleCN,DIRECT"
   - "RULE-SET,SteamCN,DIRECT"
-  - "RULE-SET,GitHub,🌐 全部节点"
-  - "RULE-SET,Microsoft,🌐 全部节点"
+  - "RULE-SET,GitHub,♻️ 自动选择"
+  - "RULE-SET,Microsoft,♻️ 自动选择"
   - "DOMAIN-SUFFIX,oray.com,DIRECT"
   - "DOMAIN-SUFFIX,3322.net,DIRECT"
   - "DOMAIN-SUFFIX,ipw.cn,DIRECT"
   - "DOMAIN-SUFFIX,ipip.net,DIRECT"
   - "RULE-SET,Apple,DIRECT"
-  - "RULE-SET,Telegram,🌐 全部节点"
-  - "RULE-SET,Twitter,🌐 全部节点"
-  - "RULE-SET,ChatGPT,🌐 全部节点"
-  - "RULE-SET,TikTok,🌐 全部节点"
-  - "RULE-SET,Instagram,🌐 全部节点"
-  - "RULE-SET,PayPal,🌐 全部节点"
-  - "RULE-SET,Steam,🌐 全部节点"
-  - "RULE-SET,YouTube,🌐 全部节点"
-  - "RULE-SET,Netflix,🌐 全部节点"
-  - "RULE-SET,ProxyMedia,🌐 全部节点"
-  - "RULE-SET,ProxyGFWlist,🌐 全部节点"
+  - "RULE-SET,Telegram,♻️ 自动选择"
+  - "RULE-SET,Twitter,♻️ 自动选择"
+  - "RULE-SET,ChatGPT,♻️ 自动选择"
+  - "RULE-SET,TikTok,♻️ 自动选择"
+  - "RULE-SET,Instagram,♻️ 自动选择"
+  - "RULE-SET,PayPal,🌐♻️ 自动选择"
+  - "RULE-SET,Steam,♻️ 自动选择"
+  - "RULE-SET,YouTube,♻️ 自动选择"
+  - "RULE-SET,Netflix,♻️ 自动选择"
+  - "RULE-SET,ProxyMedia,♻️ 自动选择"
+  - "RULE-SET,ProxyGFWlist,♻️ 自动选择"
   - "RULE-SET,BilibiliHMT,DIRECT"
   - "RULE-SET,Bilibili,DIRECT"
   - "RULE-SET,ChinaMedia,DIRECT"
@@ -235,4 +235,4 @@ rules:
   - "RULE-SET,ChinaCompanyIp,DIRECT"
   - "RULE-SET,Download,DIRECT"
   - "GEOIP,CN,DIRECT"
-  - "MATCH,🌐 全部节点"
+  - "MATCH,♻️ 自动选择"
