--- a/config/Clash/nikki.yaml
+++ b/config/Clash/nikki.yaml
@@ -11,7 +11,7 @@ proxy-groups:
 geoip:
   url: "https://mirror.ghproxy.com/https://github.com/Dreamacro/maxmind-geoip/raw/release/Country.mmdb"
   path: ./Country.mmdb
-  download-detour: 🌐 全部节点
+  download-detour: ♻️ 自动选择
 
 rule-providers:
   LocalAreaNetwork:
