--- a/config/Clash/nikki.yaml
+++ b/config/Clash/nikki.yaml
@@ -175,6 +175,13 @@ rule-providers:
     interval: 86400
     format: text
     type: http
+  ChinaMedia:
+    url: https://gh.fusir.top:6767/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
+    path: ./ruleset/ChinaMedia.list
+    behavior: classical
+    interval: 86400
+    format: text
+    type: http
   ProxyMedia:
     url: https://gh.fusir.top:6767/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
     path: ./ruleset/ProxyMedia.list
