--- a/config/Clash/nikki.yaml
+++ b/config/Clash/nikki.yaml
@@ -2,6 +2,8 @@ proxy-groups:
   - name: 🌐 全部节点
     include-all: true
     type: select
+    proxies:
+      - ♻️ 自动选择
   - name: ♻️ 自动选择
     type: url-test
     include-all: true
