--- a/config/Clash/config-mihomo.yaml
+++ b/config/Clash/config-mihomo.yaml
@@ -260,7 +260,7 @@ rule-providers:
     format: text
     type: http
   GoogleCN:
-    url: https://gh.fusir.top:6767/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
+    url: https://gh.fusir.top:6767/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCN.list
     path: ./ruleset/GoogleCN.list
     behavior: classical
     interval: 86400
@@ -274,7 +274,7 @@ rule-providers:
     format: text
     type: http
   GitHub:
-    url: https://gh.fusir.top:6767/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GitHub.list
+    url: https://gh.fusir.top:6767/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Github.list
     path: ./ruleset/GitHub.list
     behavior: classical
     interval: 86400
@@ -295,7 +295,7 @@ rule-providers:
     format: text
     type: http
   Telegram:
-    url: https://gh.fusir.top:6767/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+    url: https://gh.fusir.top:6767/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Telegram.list
     path: ./ruleset/Telegram.list
     behavior: classical
     interval: 86400
@@ -371,6 +371,20 @@ rule-providers:
     interval: 86400
     format: text
     type: http
+  Tencent:
+    url: https://gh.fusir.top:6767/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Tencent.list
+    path: ./ruleset/Tencent.list
+    behavior: classical
+    interval: 86400
+    format: text
+    type: http
+  Wechat:
+    url: https://gh.fusir.top:6767/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Wechat.list
+    path: ./ruleset/Wechat.list
+    behavior: classical
+    interval: 86400
+    format: text
+    type: http
   ChinaMedia:
     url: https://gh.fusir.top:6767/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
     path: ./ruleset/ChinaMedia.list
@@ -437,6 +451,8 @@ rules:
   - "DOMAIN-SUFFIX,fusir.top,DIRECT"
   - "DOMAIN-SUFFIX,fusir.eu.org,DIRECT"
   - "DOMAIN-SUFFIX,fusir.us.kg,DIRECT"
+  - "RULE-SET,Tencent,DIRECT"
+  - "RULE-SET,Wechat,DIRECT"
   - "RULE-SET,BilibiliHMT,🎯 全球直连"
   - "RULE-SET,Bilibili,🎯 全球直连"
   - "RULE-SET,ChinaMedia,🎯 全球直连"
