--- a/config/Clash/nikki.yaml
+++ b/config/Clash/nikki.yaml
@@ -52,7 +52,7 @@ rule-providers:
     format: text
     type: http
   GoogleCN:
-    url: https://gh.fusir.top:6767/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCN.list
+    url: https://gh.fusir.top:6767/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
     path: ./ruleset/GoogleCN.list
     behavior: classical
     interval: 86400
@@ -73,7 +73,7 @@ rule-providers:
     format: text
     type: http
   Microsoft:
-    url: https://gh.fusir.top:6767/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Microsoft.list
+    url: https://gh.fusir.top:6767/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
     path: ./ruleset/Microsoft.list
     behavior: classical
     interval: 86400
@@ -103,6 +103,13 @@ rule-providers:
   Wechat:
     url: https://gh.fusir.top:6767/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Wechat.list
     path: ./ruleset/Wechat.list
+    behavior: classical
+    interval: 86400
+    format: text
+    type: http
+  MI:
+    url: https://gh.fusir.top:6767/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/MI.list
+    path: ./ruleset/MI.list
     behavior: classical
     interval: 86400
     format: text
@@ -246,6 +253,7 @@ rules:
   - "RULE-SET,ProxyGFWlist,♻️ 自动选择"
   - "RULE-SET,Tencent,DIRECT"
   - "RULE-SET,Wechat,DIRECT"
+  - "RULE-SET,MI,DIRECT"
   - "RULE-SET,BilibiliHMT,DIRECT"
   - "RULE-SET,Bilibili,DIRECT"
   - "RULE-SET,ChinaMedia,DIRECT"
