--- a/config/Clash/config-mihomo_WithIcon.yaml
+++ b/config/Clash/config-mihomo_WithIcon.yaml
@@ -229,7 +229,10 @@ proxy-groups:
     icon: https://fastly.jsdelivr.net/gh/shindgewongxj/WHATSINStash@master/icon/select.png
     include-all: true
     type: select
-
+geoip:
+  url: "https://ghfast.top/https://github.com/Dreamacro/maxmind-geoip/raw/release/Country.mmdb"
+  path: ./Country.mmdb
+  download-detour: 全球直连
 rule-providers:
   LocalAreaNetwork:
     url: https://gh.fusir.top:6767/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
@@ -316,15 +319,15 @@ rule-providers:
     format: text
     type: http
   Telegram:
-    url: https://gh.fusir.top:6767/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Telegram.list
+    url: https://gh.fusir.top:6767/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
     path: ./ruleset/Telegram.list
     behavior: classical
     interval: 86400
     format: text
     type: http
   ChatGPT:
-    url: https://gh.fusir.top:6767/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
-    path: ./ruleset/OpenAi.list
+    url: https://gh.fusir.top:6767/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AI.list
+    path: ./ruleset/AI.list
     behavior: classical
     interval: 86400
     format: text
@@ -346,6 +349,13 @@ rule-providers:
   Steam:
     url: https://gh.fusir.top:6767/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
     path: ./ruleset/Steam.list
+    behavior: classical
+    interval: 86400
+    format: text
+    type: http
+  Binance:
+    url: https://gh.fusir.top:6767/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Binance.list
+    path: ./ruleset/Binance.list
     behavior: classical
     interval: 86400
     format: text
@@ -388,6 +398,13 @@ rule-providers:
   Wechat:
     url: https://gh.fusir.top:6767/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Wechat.list
     path: ./ruleset/Wechat.list
+    behavior: classical
+    interval: 86400
+    format: text
+    type: http
+  MI:
+    url: https://gh.fusir.top:6767/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/MI.list
+    path: ./ruleset/MI.list
     behavior: classical
     interval: 86400
     format: text
@@ -444,6 +461,7 @@ rules:
   - "RULE-SET,Instagram,Instagram"
   - "RULE-SET,Steam,Telegram"
   - "RULE-SET,YouTube,YouTube"
+  - "RULE-SET,Binance,ChatGPT"
   - "RULE-SET,Netflix,Netflix"
   - "RULE-SET,ProxyGFWlist,节点选择"
   - "DOMAIN-SUFFIX,fusir.top,全球直连"
@@ -451,6 +469,7 @@ rules:
   - "DOMAIN-SUFFIX,fusir.us.kg,全球直连"
   - "RULE-SET,Tencent,全球直连"
   - "RULE-SET,Wechat,全球直连"
+  - "RULE-SET,MI,全球直连"
   - "RULE-SET,BilibiliHMT,全球直连"
   - "RULE-SET,Bilibili,全球直连"
   - "RULE-SET,ChinaMedia,全球直连"
