--- a/config/Clash/config-mihomo_WithIcon.yaml
+++ b/config/Clash/config-mihomo_WithIcon.yaml
@@ -459,9 +459,9 @@ rules:
   - "RULE-SET,ChatGPT,ChatGPT"
   - "RULE-SET,TikTok,TikTok"
   - "RULE-SET,Instagram,Instagram"
-  - "RULE-SET,Steam,Telegram"
+  - "RULE-SET,Steam,香港自动"
   - "RULE-SET,YouTube,YouTube"
-  - "RULE-SET,Binance,ChatGPT"
+  - "RULE-SET,Binance,香港自动"
   - "RULE-SET,Netflix,Netflix"
   - "RULE-SET,ProxyGFWlist,节点选择"
   - "DOMAIN-SUFFIX,fusir.top,全球直连"
