--- a/config/Clash/nikki.yaml
+++ b/config/Clash/nikki.yaml
@@ -233,6 +233,9 @@ rules:
   - "DOMAIN-SUFFIX,3322.net,DIRECT"
   - "DOMAIN-SUFFIX,ipw.cn,DIRECT"
   - "DOMAIN-SUFFIX,ipip.net,DIRECT"
+  - "DOMAIN-SUFFIX,docker.io,♻️ 自动选择"
+  - "DOMAIN-SUFFIX,hub.docker.com,♻️ 自动选择"
+  - "DOMAIN-SUFFIX,auth.docker.io,♻️ 自动选择"
   - "RULE-SET,Apple,DIRECT"
   - "RULE-SET,Telegram,♻️ 自动选择"
   - "RULE-SET,Twitter,♻️ 自动选择"
