--- a/config/Clash/mihomo.yaml
+++ b/config/Clash/mihomo.yaml
@@ -424,7 +424,7 @@ rules:
   - "RULE-SET,LocalAreaNetwork,🎯 全球直连"
   - "RULE-SET,UnBan,🎯 全球直连"
   - "RULE-SET,Google,🍀 Google"
-  - "RULE-SET,GoogleCN,🎯 全球直连"
+  - "RULE-SET,GoogleCN,🍀 Google"
   - "RULE-SET,SteamCN,🎯 全球直连"
   - "RULE-SET,GitHub,💻 GitHub"
   - "RULE-SET,Microsoft,🪟 Microsoft"
