--- a/config/Clash/mihomo.yaml
+++ b/config/Clash/mihomo.yaml
@@ -251,6 +251,13 @@ rule-providers:
     interval: 86400
     format: text
     type: http
+  GoogleVoice:
+    url: https://gh.fusir.top:6767/https://gh.fusir.top:6767/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleVoice/GoogleVoice.list
+    path: ./ruleset/GoogleVoice.list
+    behavior: classical
+    interval: 86400
+    format: text
+    type: http
   SteamCN:
     url: https://gh.fusir.top:6767/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/SteamCN/SteamCN.list
     path: ./ruleset/SteamCN.list
@@ -425,6 +432,7 @@ rules:
   - "RULE-SET,UnBan,🎯 全球直连"
   - "RULE-SET,Google,🍀 Google"
   - "RULE-SET,GoogleCN,🍀 Google"
+  - "RULE-SET,GoogleVoice,🇺🇲 美国节点"
   - "RULE-SET,SteamCN,🎯 全球直连"
   - "RULE-SET,GitHub,💻 GitHub"
   - "RULE-SET,Microsoft,🪟 Microsoft"
