--- a/config/Clash/mihomo.yaml
+++ b/config/Clash/mihomo.yaml
@@ -252,7 +252,7 @@ rule-providers:
     format: text
     type: http
   GoogleVoice:
-    url: https://gh.fusir.top:6767/https://gh.fusir.top:6767/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleVoice/GoogleVoice.list
+    url: https://gh.fusir.top:6767/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleVoice/GoogleVoice.list
     path: ./ruleset/GoogleVoice.list
     behavior: classical
     interval: 86400
