--- a/config/Clash/mihomo.yaml
+++ b/config/Clash/mihomo.yaml
@@ -237,6 +237,13 @@ rule-providers:
     interval: 86400
     format: text
     type: http
+  GoogleVoice:
+    url: https://gh.fusir.top:6767/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleVoice/GoogleVoice.list
+    path: ./ruleset/GoogleVoice.list
+    behavior: classical
+    interval: 86400
+    format: text
+    type: http
   Google:
     url: https://gh.fusir.top:6767/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
     path: ./ruleset/Google.list
@@ -247,13 +254,6 @@ rule-providers:
   GoogleCN:
     url: https://gh.fusir.top:6767/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
     path: ./ruleset/GoogleCN.list
-    behavior: classical
-    interval: 86400
-    format: text
-    type: http
-  GoogleVoice:
-    url: https://gh.fusir.top:6767/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleVoice/GoogleVoice.list
-    path: ./ruleset/GoogleVoice.list
     behavior: classical
     interval: 86400
     format: text
@@ -430,10 +430,10 @@ rule-providers:
 rules:
   - "RULE-SET,LocalAreaNetwork,🎯 全球直连"
   - "RULE-SET,UnBan,🎯 全球直连"
-  - "RULE-SET,Google,🍀 Google"
-  - "RULE-SET,GoogleCN,🍀 Google"
   - "RULE-SET,GoogleVoice,🇺🇲 美国节点"
-  - "RULE-SET,SteamCN,🎯 全球直连"
+  - "RULE-SET,YouTube,📹 YouTube"
+  - "RULE-SET,GoogleCN,🎯 全球直连"
+  - "RULE-SET,Google,🍀 Google"
   - "RULE-SET,GitHub,💻 GitHub"
   - "RULE-SET,Microsoft,🪟 Microsoft"
   - "RULE-SET,Apple,🍎 Apple"
@@ -442,8 +442,8 @@ rules:
   - "RULE-SET,ChatGPT,🤖 ChatGPT"
   - "RULE-SET,TikTok,🎵 TikTok"
   - "RULE-SET,Instagram,📷 Instagram"
+  - "RULE-SET,SteamCN,🎯 全球直连"
   - "RULE-SET,Steam,🇭🇰 香港节点"
-  - "RULE-SET,YouTube,📹 YouTube"
   - "RULE-SET,Binance,🇭🇰 香港节点"
   - "RULE-SET,Netflix,🎥 Netflix"
   - "DOMAIN-SUFFIX,fusir.top,DIRECT"
